Version 1.2.3
-------------
Changed: updated wxPython to 4.0.
Changed: updated to Python 3.
Changed: enabled high DPI support.

Version 1.2.2
-------------
Fixed: a serious issue with saving thing, weapon and ammo names that could cause no names to be saved and the wrong names loaded when opening a second patch. Thanks to Da Werecat.
Changed: detecting if a thing is a projectile is now done by looking for actions in it's used list of states that set the momentum as a non-fixed point value. Currently Chase and VileChase being used will cause a thing to not be considered a projectile and it's speed property to be automatically cast to a non-fixed point value internally and in written patches.

Version 1.2.1
-------------
Added: support the RandomJump action in state previews.
Added: Extended DehackEd configuration with the extra things and empty states from Doom Retro. Crispy Doom also supports these.
Added: state actions that spawn things (like missiles from monster attacks) will now play that thing's sound during a preview.
Fixed: unused state parameter descriptions would not be updated when an action using them was selected.
Fixed: added missing things to the Doom Retro configuration. Thanks to VGA.
Changed: WAD reloading is now faster and doesn't reset the UI state.

Version 1.2.0
-------------
Added: state animation preview (with sounds) by pressing ~ on a state or using the new state context menu. Pressing ~ again inside the animation preview will restart it. Right-clicking a thing or weapon state from their respective dialogs will preview it directly.
Added: linking states together can now be done by selecting them, right-clicking and selecting a link option (or use the respective shortcut key). Linking is done in the order of selection.
Added: an option to clear out all selected states from the state context menu.
Added: an option to clear out a thing's properties from a thing's context menu.
Added: DOOM Retro "Gib health" thing property.