@@ -1,22 +1,22 @@
 Known bugs
+- Rotating sprite previews does not work correctly after Python 3 upgrade.
 - settings.json ended up being empty: https://www.doomworld.com/vb/doom-editing/89861-whacked4-problem/
 - Thing editor property fields do not scale well when resized.
 - Fix column widths with different font sizes. Auto-sizing based on font and text contents?
+- Adjust window dialogs for to better fit 1024x768 maximum screen size and with new high DPI handling.
 
 Low priority bugs
-- State Editor: flash when selecting states. Related to parameters UI.
 - When listview column widths are resized, a scrollbar is sometimes displayed for no reason.
 - Toolbar buttons clickable area does not extend to the side of the toolbar. An old wxWidgets bug\regression.
-- Proper HiDPI support. WxWidgets needs more work for this.
 
 Features
-1.2.2
+1.2.3
 - "Looks like when you restore a thing, its speed isn't being restored. Or maybe it just resets to 0. Same when copying."
 - Bug related to speed conversion: https://www.doomworld.com/forum/topic/62909-whacked-4/?page=5#comment-1789026
-- UI manual \ Dehacked tutorial.
-- Look into new Eternity Engine and PrBoom+ Dehacked features.
 
 1.3.0 and later
+- UI manual \ Dehacked tutorial.
+- Look into new Eternity Engine and PrBoom+ Dehacked features.
 - "Would've been better if WhackEd allowed to name the states like in the source code. Then you could reference them
    by names rather than by numbers, and moving large chunks of the table would be trivial. You'd only be limited by
    its size. Then again, if you want to make a complex TC in Boom, convenience is something you shouldn't be taking
